# suspicious_search_util

./: .gitignore  CMakeLists.txt  README.md
doc/: SolutionAnalyzePoints.md
project/: main.cpp
project/include/: Analyzer.h  Def.h  DirectoryReport.h  FileFinder.h  FileFinder.hpp  Match.h  SuspiciousEntryStorage.h  SuspiciousStorage.h
project/src/: Analyzer.cpp  DirectoryReport.cpp  FileFinder.cpp  Match.cpp  SuspiciousEntryStorage.cpp  SuspiciousStorage.cpp
tests/: FileAnalyzerTests.cpp  FileFinderTests.cpp  FileScannerTests.cpp  MatchTests.cpp  SuspiciousStorageTests.cpp
tests/FileScannerTestData/: valid.bat  valid.js  valid.txt
tools/: .clang-format  build.cmd  format-code.cmd  format-code.sh  linter-checks.sh
